canary-mesh-demo/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-mesh-canary-canary
  namespace: rollouts-mesh-canary-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: rollouts-mesh-canary-demo
