canary-mesh-demo/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: rollouts-mesh-canary-gateway
  namespace: rollouts-mesh-canary-demo
spec:
  selector:
    istio: ingressgateway
    app.kubernetes.io/component: rollouts-mesh-canary-ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
