canary-mesh-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollouts-mesh-canary-demo
  namespace: rollouts-mesh-canary-demo
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
